[gd_scene load_steps=34 format=3 uid="uid://cefingfw6y2jv"]

[ext_resource type="Script" uid="uid://gs0m0ckr84vj" path="res://Characters/player.gd" id="1_1ju47"]
[ext_resource type="Texture2D" uid="uid://bkyx7ccepvksw" path="res://Assets/Bot Wheel/charge.png" id="2_7pihf"]
[ext_resource type="Texture2D" uid="uid://cv4xpnuhfa6lo" path="res://Assets/Bot Wheel/wake.png" id="2_ynroq"]
[ext_resource type="Texture2D" uid="uid://b25fsr1txdl3u" path="res://Assets/Bot Wheel/GAS dash with FX.png" id="3_c3bgu"]
[ext_resource type="Texture2D" uid="uid://dhyi001ccq6n3" path="res://Assets/Bot Wheel/move with FX.png" id="3_v6d5b"]
[ext_resource type="PackedScene" uid="uid://cdvge3f3l1iks" path="res://Characters/grabber_gun.tscn" id="4_ynroq"]
[ext_resource type="Texture2D" uid="uid://bjtw2ha1dfwy7" path="res://Assets/ChargingBarUnder.png" id="5_55lj8"]
[ext_resource type="Texture2D" uid="uid://gwx4aktpguja" path="res://Assets/ChargingBarProgress.png" id="6_qhb0e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wbcqo"]
atlas = ExtResource("2_7pihf")
region = Rect2(9, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_x870h"]
atlas = ExtResource("2_7pihf")
region = Rect2(9, 26, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2grho"]
atlas = ExtResource("2_7pihf")
region = Rect2(9, 52, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_icbm8"]
atlas = ExtResource("2_7pihf")
region = Rect2(9, 78, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0thl"]
atlas = ExtResource("3_c3bgu")
region = Rect2(0, 0, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4b6j"]
atlas = ExtResource("3_c3bgu")
region = Rect2(0, 26, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0712"]
atlas = ExtResource("3_c3bgu")
region = Rect2(0, 52, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_uigg4"]
atlas = ExtResource("3_c3bgu")
region = Rect2(0, 78, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_is2h6"]
atlas = ExtResource("3_c3bgu")
region = Rect2(0, 104, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhl4u"]
atlas = ExtResource("3_c3bgu")
region = Rect2(0, 130, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8wfh"]
atlas = ExtResource("3_c3bgu")
region = Rect2(0, 156, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_55lj8"]
atlas = ExtResource("2_ynroq")
region = Rect2(7, 104, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhb0e"]
atlas = ExtResource("2_ynroq")
region = Rect2(7, 78, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pihf"]
atlas = ExtResource("2_ynroq")
region = Rect2(7, 52, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3bgu"]
atlas = ExtResource("3_v6d5b")
region = Rect2(7, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwlvs"]
atlas = ExtResource("3_v6d5b")
region = Rect2(7, 26, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_x35ji"]
atlas = ExtResource("3_v6d5b")
region = Rect2(7, 52, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8u7c"]
atlas = ExtResource("3_v6d5b")
region = Rect2(7, 78, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_lli6r"]
atlas = ExtResource("3_v6d5b")
region = Rect2(7, 104, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wf5q"]
atlas = ExtResource("3_v6d5b")
region = Rect2(7, 130, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_r52jx"]
atlas = ExtResource("3_v6d5b")
region = Rect2(7, 156, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijtlc"]
atlas = ExtResource("3_v6d5b")
region = Rect2(7, 182, 32, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbcqo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbcqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x870h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2grho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icbm8")
}],
"loop": true,
"name": &"Charging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0thl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4b6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0712")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uigg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is2h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhl4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8wfh")
}],
"loop": true,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55lj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhb0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pihf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pihf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhb0e")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3bgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwlvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x35ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8u7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lli6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wf5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r52jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijtlc")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ju47"]
radius = 5.0
height = 19.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55lj8"]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 13
script = ExtResource("1_1ju47")
input_left = "Left"
input_right = "Right"
input_jump = "Jump"
jump_duration = 0.35

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_wbcqo")
animation = &"Charging"
frame_progress = 0.0242936

[node name="PhysicsCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1ju47")

[node name="GrabberGun_R" parent="." instance=ExtResource("4_ynroq")]
position = Vector2(18, 2)

[node name="GrabberGun_L" parent="." instance=ExtResource("4_ynroq")]
position = Vector2(-18, 2)

[node name="DashCollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="DashCollisionShape" type="CollisionShape2D" parent="DashCollisionArea"]
shape = SubResource("RectangleShape2D_55lj8")

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashDurationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ChargedShotTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ChargingProgressIndicator" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = -4.5
offset_top = -19.5
offset_right = 11.5
offset_bottom = -3.5
scale = Vector2(0.5, 0.5)
fill_mode = 3
texture_under = ExtResource("5_55lj8")
texture_progress = ExtResource("6_qhb0e")

[connection signal="body_entered" from="DashCollisionArea" to="." method="_on_dash_collision_area_body_entered"]
[connection signal="timeout" from="DashDurationTimer" to="." method="_on_dash_duration_timer_timeout"]
